--- a/about.html
+++ b/about.html
@@ -83,127 +83,23 @@
 						<div class="col-lg-5 col-md-6 home-about-right">
 							<h1 class="text-uppercase">Personal Details</h1>
 							<p>
-								Hi. My name is Harrison, and I build amazing things.
+								Here's some more info obout me.
 							</p>
-							<a href="#FAQ" class="primary-btn text-uppercase">More About Me</a>
+							<a href="#FAQ" class="primary-btn text-uppercase">About Me</a>
 						</div>
 
 
 						<div class="col-lg-12 pt-60">
-							<p>At the beginning of 2018 I didn't know where my life was going. After some serious self-reflection about my passions and interests, I committed to learning everything I could about machine learning, data science, and the tech industry. I built my own curriculum, a hodgepodge of hundreds of websites and forums, and committed between 4-6 hours each day to learn the basics.</p><p>
+							<p>At the beginning of 2018 I didn't know where my life was going. After some serious self-reflection about my passions and interests, I committed to learning everything I could about machine learning, data science, and the tech industry.</p><p>
 
-Fast forward to today, I am halfway through the computer science Masters program at the University of Texas at Dallas. I work as a data science freelancer building NLP models for research teams and businesses across the US. Lastly, I teach data science skills to enterprise professionals in a class room setting. Teaching skills like Python, predictive modelling, and data analytics</p>
-<p>In the Summer of 2019, I will be working for Sprint as a data science intern. I will be located at Sprint's global headquarters in Overland Park, KS.</p>
+							Today, I am nearing the end of the computer science Masters at the University of Texas at Dallas. I currently work as an intern data scientist at Sprint, using machine learning and statistical methods to detect when business systems fail. </p>
 
 
 						</div>
 					</div>
 				</div>
 
-					<hr>
 
-
-					<section class="home-about-area section-gap">
-
-							<div class="text-center">
-									<div class="menu-content">
-											<div class="title text-center">
-													<h1 class="mb-10">Skills Expertisse</h1>
-													  1 - Basic <span style="display: inline-block; width: 2ch;">&#9;</span>
-														 2 - Novice <span style="display: inline-block; width: 2ch;">&#9;</span>
-														 3 - Intermediate<span style="display: inline-block; width: 2ch;">&#9;</span>
-														  <p>4 - Advanced<span style="display: inline-block; width: 2ch;">&#9;</span>
-															 5 - Expert<p/>
-
-											</div>
-
-									</div>
-							</div>
-
-
-
-
-
-
-
-
-				<div class="container">
-						<div class="row skillbar-wraps">
-							<div class="col-lg-4 skill-left">
-								<h4 class="text-center pt-50"> Devops </h4>
-								<div class="single-skill">
-									<p>
-										Server Management (Linux / Flask) -   3
-									</p>
-									<div class="skill" data-width="60"></div>
-								</div>
-								<div class="single-skill">
-									<p>
-										Database Manipulation (SQL) -   3
-									</p>
-									<div class="skill" data-width="60"></div>
-								</div>
-								<div class="single-skill">
-									<p>
-										Cluster Computing (Spark) - 1
-									</p>
-									<div class="skill" data-width="20"></div>
-								</div>
-							</div>
-
-
-							<div class="col-lg-4 skill-right">
-								<h4 class="text-center pt-50"> Data Analytics </h4>
-								<div class="single-skill">
-									<p>
-										Visualization and Presentation - 5
-									</p>
-									<div class="skill" data-width="100"></div>
-								</div>
-
-								<div class="single-skill">
-									<p>
-										Data Munging - 4
-									</p>
-									<div class="skill" data-width="80"></div>
-								</div>
-
-
-								<div class="single-skill">
-									<p>
-										Statistical Methods - 3
-									</p>
-									<div class="skill" data-width="60"></div>
-								</div>
-							</div>
-
-							<div class="col-lg-4 skill-right">
-								<h4 class="text-center pt-50">Machine Learning (AI)</h4>
-								<div class="single-skill">
-									<p>
-										Deep Learning (Keras) - 4
-									</p>
-									<div class="skill" data-width="80"></div>
-								</div>
-
-								<div class="single-skill">
-									<p>
-										Natural Language Processing - 3
-									</p>
-									<div class="skill" data-width="60"></div>
-								</div>
-								<div class="single-skill">
-									<p>
-										Predictive Modelling (SKLearn) - 3
-									</p>
-									<div class="skill" data-width="60"></div>
-								</div>
-							</div>
-
-						</div>
-					</div>
-
-					</section>
 
 
 
@@ -245,7 +141,7 @@ Fast forward to today, I am halfway through the computer science Masters program
 			          <time>Masters in Computer Science</time>
 			        </h4>
 			        <p><b>University of Texas at Dallas</b></p>
-			        <p>August 2018 - May 2020</p>
+			        <p>August 2018 - Dec 2020</p>
 			      </div>
 			    </li>
 					<li>
@@ -254,7 +150,7 @@ Fast forward to today, I am halfway through the computer science Masters program
 							 <time>Freelance Data Scientist</time>
 						 </h4>
 						 <p><b>UpWork</b></p>
-						 <p>November 2018 - Current</p>
+						 <p>November 2018 - Sep 2019</p>
 					 </div>
 				 </li>
 				 <li>
@@ -263,16 +159,16 @@ Fast forward to today, I am halfway through the computer science Masters program
 							 <time>Data Science Instructional Associate</time>
 						 </h4>
 						 <p><b>General Assembly</b></p>
-						 <p>March 2019 - Current</p>
+						 <p>March 2019 - July 2019</p>
 					 </div>
 				 </li>
 				 <li>
 					 <div class="content">
 						 <h4>
-							 <time>Data Science Intern (Upcoming)</time>
+							 <time>Data Science Intern</time>
 						 </h4>
 						 <p><b>Sprint - Billing Systems</b></p>
-						 <p>May 2019 - August 2019</p>
+						 <p>May 2019 - Current</p>
 					 </div>
 				 </li>
 
@@ -298,7 +194,7 @@ Fast forward to today, I am halfway through the computer science Masters program
 											<a href="" class="active">Why did you make this website?</a>
 										</dt>
 										<dd style="display: block;">
-											I created and deployed this website on a private <a href="https://www.digitalocean.com/">DigitalOcean</a> server so that I could learn more about web app design and back-end development. I believe that knowledge of <b>both data science and back-end development</b> is the secret to seamless implementation of artificial intelligence in existing web technologies.</p>
+											I created and deployed this website on a private <a href="https://www.digitalocean.com/">DigitalOcean</a> server so that I could learn more about web app design and back-end development.</p>
 
 	   <p> In the future I will use this website as a nesting ground for web-based computer vision and NLP models. Though I don't expect it to be anything more than a portfolio site, I strongly suspect that these skills will be crucial to technological development in the years to come.</p>
 
@@ -314,7 +210,7 @@ Fast forward to today, I am halfway through the computer science Masters program
 										</dd>
 
 										<dt>
-											<a href="">Do you have any experience with database management?</a>
+											<a href="">Do you have any experience working with databases?</a>
 										</dt>
 										<dd style="display: none;">
 										<p>I have hosted and deployed my own MySQL database with this website. I have a intermediate knowledge of SQL queries, and have had experience working with AWS and GCP database servers through SSH.</p>
@@ -331,7 +227,7 @@ Fast forward to today, I am halfway through the computer science Masters program
 										</dd>
 
 
-						
+
 
 									<dt>
 										<a href=""> What kind of work do you see yourself doing? </a>
