--- a/index.html
+++ b/index.html
@@ -89,18 +89,13 @@
 							<br>
 
 							<blockquote class="generic-blockquote">
-								<p class="fz-18"><i>In the information age, anyone can learn anything if they have passion and dedication.</i></p>
-								<br>
-									<p class="fz-16"> At the beginning of 2018 I started teaching myself how to code in Python. Shortly thereafter, I left my corporate job,
-										 got a part-time job at a daycare, and started studying data-science and software engineering full time. My passion sustained
-										 me. I spent many night in front of a computer screen, studying coding tutorials and discussing on data science forums.
-									 </p>
 								<p class="fz-16">
-									I still treat every day as an opportunity to learn something new. Recently, I have started working as a data science freelancer for various research teams and businesses across the US. I am also pursuing a computer science Masters at the University of Texas at Dallas.
+									 A few interesting things about me. I love to read science fiction (my favorite is Frank Herbert's Dune). Next, I am an avid gamer. Though I am not very good, I love to play competitive strategy games and first person shooters. Last, I am constantly learning. Not a day goes by where I don't push myself to learn something new, whether that be practicing a coding framework or trying to understand an idea from a machine learning paper.
 								</p>
 								<p class="fz-16">
-									Over the next few months I will be interning at Sprint as a data scientist.
+									 I am currently interning at Sprint. Using statistics and machine learning to detect when business systems fail. I am also studying full-time at the University of Texas at Dallas towards a Master's in Computer Science. My main interests lie at the intersection of engineering and machine learning.
 								</p>
+
 							</blockquote>
 							<a href="about" class="primary-btn text-uppercase">About me</a>
 
@@ -130,7 +125,7 @@
 								<span class="lnr lnr-chart-bars"></span>
 								<a><h4>Data Analytics</h4></a>
 								<p>
-									The first step in building amazing machine learning applications is collecting and understanding data.
+									I love good design, and making a beautiful and compelling presentation is one of my favorite skills.
 								</p>
 							</div>
 						</div>
@@ -140,7 +135,7 @@
 								<span class="lnr lnr-bubble"></span>
 								<a><h4>NLP</h4></a>
 								<p>
-									I build intelligent systems that use text and speech data to understand, describe, and interact with people.
+									I have worked with researchers to apply NLP techniques to make sense of the motivations behind human interactions.
 								</p>
 							</div>
 						</div>
@@ -150,7 +145,7 @@
 								<span class="lnr lnr-graduation-hat"></span>
 								<a><h4>Machine Learning</h4></a>
 								<p>
-									I have a deep understanding of the theory, implementation, and best practices that make machine learning applications successful.
+									Machine learning is more than an API call to scikit-learn. I love the math and theory as well as the implementation.
 								</p>
 							</div>
 						</div>
@@ -161,7 +156,7 @@
 								<span class="lnr lnr-layers"></span>
 								<a><h4>Parallel Computing</h4></a>
 								<p>
-									I am learning about horizontally scaled databases. I hope to implement these ideas soon.
+									I regularly extract data from Hadoop databases using the HIVE framework.
 								</p>
 							</div>
 						</div>
@@ -179,7 +174,7 @@
 								<span class="lnr lnr-cloud-check"></span>
 								<a><h4>Cloud Compute</h4></a>
 								<p>
-										I maintain DigitalOcean servers for database storage, model training, and model deployment.
+										I maintain servers for database storage, model training, and model deployment.
 								</p>
 							</div>
 						</div>
@@ -223,21 +218,21 @@
 				<h4 class="text-center pt-50"> Devops </h4>
 				<div class="single-skill">
 					<p>
-						Server Management (Linux / SSH) -   3
+						Server Management (Linux / Bash) -   3
 					</p>
 					<div class="skill" data-width="60"></div>
 				</div>
 				<div class="single-skill">
 					<p>
-						Database Manipulation (SQL) -   3
+						Database Manipulation (SQL) -   5
 					</p>
-					<div class="skill" data-width="60"></div>
+					<div class="skill" data-width="100"></div>
 				</div>
 				<div class="single-skill">
 					<p>
-						Cluster Computing (Spark) - 1
+						Cluster Computing (HIVE) - 3
 					</p>
-					<div class="skill" data-width="20"></div>
+					<div class="skill" data-width="60"></div>
 				</div>
 			</div>
 
@@ -253,9 +248,9 @@
 
 				<div class="single-skill">
 					<p>
-						Data Munging - 4
+						Python - 5
 					</p>
-					<div class="skill" data-width="80"></div>
+					<div class="skill" data-width="100"></div>
 				</div>
 
 
@@ -268,10 +263,10 @@
 			</div>
 
 			<div class="col-lg-4 skill-right">
-				<h4 class="text-center pt-50">Machine Learning (AI)</h4>
+				<h4 class="text-center pt-50">Machine Learning</h4>
 				<div class="single-skill">
 					<p>
-						Deep Learning (Keras) - 4
+						Deep Learning (PyTorch) - 4
 					</p>
 					<div class="skill" data-width="80"></div>
 				</div>
@@ -316,6 +311,29 @@
 
 			<div class="single-recent-blog col-lg-4 col-md-4">
 				<div class="thumb">
+					<a href="https://github.com/harrisonjansma/Cpp-Algorithm-Implementations" target="_blank">
+					<img class="f-img img-fluid mx-auto" src="img/alg.jpg" alt="">
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
+					<div class="meta">
+						Aug 14th, 2019
+					</div>
+				</div>
+				<a href="https://github.com/harrisonjansma/Cpp-Algorithm-Implementations" target="_blank">
+					<h4>Implementing Common Algorithms in C++</h4>
+				</a>
+				<p>
+					The only way to become a not-garbage-coder is to code a lot. This repository contains some of the coursework I've completed over the last few months. <br><br> As the semester winds down, I hope to start a new passion project soon!
+				</p>
+			</div>
+
+
+
+
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
 					<a href="https://github.com/harrisonjansma/Analyzing_Medium" target="_blank">
 					<img class="f-img img-fluid" src="img/medium2.jpg" alt="">
 				</a>
@@ -352,32 +370,13 @@
 				<p>
 					In this article, published in Towards Data Science and KDNuggets, I recount my months of self-study and gave advice and resources for the aspiring data-scientist.
 <br><br>
-					This article was the most shared story on KDNuggets for October. It was also well received on Medium.com, receiving 22k reads since publication and breaking the 99.9th percentile of claps for all Medium articles.
+					This article was the most shared story on KDNuggets for the month of October 2018.
 				</p>
 			</div>
 
 
 
-			<div class="single-recent-blog col-lg-4 col-md-4">
-				<div class="thumb">
-					<a href="https://towardsdatascience.com/dont-use-dropout-in-convolutional-networks-81486c823c16" target="_blank">
-					<img class="f-img img-fluid mx-auto" src="img/dropoutcover.png" alt="">
-				</a>
-				</div>
-				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
 
-					<div class="meta">
-						Aug 14th, 2018
-					</div>
-				</div>
-				<a href="https://towardsdatascience.com/dont-use-dropout-in-convolutional-networks-81486c823c16" target="_blank">
-					<h4>Don't Use Dropout in ConvNets</h4>
-				</a>
-				<p>
-					In this project I experimented with regularization in convolutional neural networks. I found that removing dropout layers increased
-					performance in image recognition tasks. <br><br> I published an article in Towards Data Science and KDNuggets detailing the experiment and my results.
-				</p>
-			</div>
 
 
 		</div>
@@ -570,18 +569,18 @@
 							<div class="top-part">
 								<img src="img/github.jpg" height=300 width=300>
 								<h4>GitHub</h4>
-								<p class="mt-10">My base-of-operations for all things machine learning, computer vision, and back-end development.</p>
+								<p class="mt-10">My base-of-operations for all things code.</p>
 							</div>
 						</a>
 
 
 						</div>
 						<div class="col-lg-6 col-md-6 single-price">
-							<a href="https://medium.com/@harrisonjansma">
+							<a href="https://www.medium.com/@harrisonjansma">
 							<div class="top-part">
 								<img src="img/medium3.jpg" height=300 width=300>
 								<h4>Medium</h4>
-								<p class="mt-10">All my life I have been an avid sci-fi and fantasy reader. Recently I have begun writing about my research, thoughts, and experiences. </p>
+								<p class="mt-10">Where I write stuff. </p>
 							</div>
 						</a>
 
