--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 							<blockquote class="generic-blockquote">
 								<p class="fz-16">
-									 A few interesting things about me. I love to read science fiction (my favorite is Frank Herbert's Dune). Next, I am an avid gamer. Though I am not very good, I love to play competitive strategy games and first person shooters. Last, I am constantly learning. Not a day goes by where I don't push myself to learn something new, whether that be practicing a coding framework or trying to understand an idea from a machine learning paper.
+									 A few interesting things about me. I love to read science fiction (my favorite is Frank Herbert's Dune). Next, I am an avid gamer. Though I am not very good, I love to play competitive strategy games and first person shooters. Last, I am constantly learning. Every day I push myself to learn something new, whether that be practicing a coding framework or trying to understand an idea from a machine learning paper.
 								</p>
 								<p class="fz-16">
 									 I am currently interning at Sprint. Using statistics and machine learning to detect when business systems fail. I am also studying full-time at the University of Texas at Dallas towards a Master's in Computer Science. My main interests lie at the intersection of engineering and machine learning.
@@ -125,7 +125,7 @@
 								<span class="lnr lnr-chart-bars"></span>
 								<a><h4>Data Analytics</h4></a>
 								<p>
-									I love good design, and making a beautiful and compelling presentation is one of my favorite skills.
+									I love telling a story. Making a beautiful and compelling presentation is one of my favorite skills.
 								</p>
 							</div>
 						</div>
@@ -325,7 +325,7 @@
 					<h4>Implementing Common Algorithms in C++</h4>
 				</a>
 				<p>
-					The only way to become a not-garbage-coder is to code a lot. This repository contains some of the coursework I've completed over the last few months. <br><br> As the semester winds down, I hope to start a new passion project soon!
+					The only way to become a not-garbage-coder is to code a lot. <br><br> This repository contains some of the coursework I've completed over the last few months. As the semester winds down, I hope to start a new passion project soon!
 				</p>
 			</div>
 
