--- a/index.html
+++ b/index.html
@@ -33,29 +33,27 @@
 
 		<body>
 			<header id="header">
-				<div class="container main-menu">
-					<div class="row align-items-center justify-content-between d-flex">
-						<div class id="logo">
-							<a href="/"><h3>H. Jansma </h3></a>
-					 </div>
-						<nav id="nav-menu-container">
-							<ul class="nav-menu">
-								<li><a href="/">Home</a></li>
-								<li><a href="about">About</a></li>
+	      <div class="container main-menu">
+	        <div class="row align-items-center justify-content-between d-flex">
+	          <div class id="logo">
+	            <a href="/"><h3>H. Jansma </h3></a>
+	         </div>
+	          <nav id="nav-menu-container">
+	            <ul class="nav-menu">
+	              <li><a href="/">Home</a></li>
+	              <li><a href="about">About</a></li>
 
 
-								<li><a href="archive">Portfolio</a>
-								</li>
+	              <li><a href="archive">Portfolio</a></li>
+	              <li><a href="huckleberry">Huck</a></li>
 
+	              <li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
+	              </ul>
 
-								<li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
-								</ul>
-							</ul>
-
-						</nav><!-- #nav-menu-container -->
-					</div>
-				</div>
-			</header><!-- #header -->
+	          </nav><!-- #nav-menu-container -->
+	        </div>
+	      </div>
+	    </header><!-- #header -->
 			<!-- start banner Area -->
 			<section class="banner-area">
 				<div class="container">
@@ -90,10 +88,10 @@
 
 							<blockquote class="generic-blockquote">
 								<p class="fz-16">
-									 A few interesting things about me. I love to read science fiction (my favorite is Frank Herbert's Dune). Next, I am an avid gamer. Though I am not very good, I love to play competitive strategy games and first person shooters. Last, I am constantly learning. Every day I push myself to learn something new, whether that be practicing a coding framework or trying to understand an idea from a machine learning paper.
+									 A few interesting things about me. I love to read science fiction (my favorite is Frank Herbert's Dune). I am also an avid gamer. I love to play competitive strategy games and first person shooters. Lastly, I love learning. Every day I push myself to learn something new, whether that be about machine learning, software engineeriing, or miscellaneous facts about the universe.
 								</p>
 								<p class="fz-16">
-									 I am currently interning at Sprint. Using statistics and machine learning to detect when business systems fail. I am also studying full-time at the University of Texas at Dallas towards a Master's in Computer Science. My main interests lie at the intersection of engineering and machine learning.
+									 I just finished an internship at Sprint, where I used statistics and machine learning to detect failures in business systems. I am currently finishing a Master's of Computer Science at the University of Texas at Dallas, after which I plan on searching for Data Science and Software Engineering positions in Texas, California, and California.
 								</p>
 
 							</blockquote>
