--- a/about.html
+++ b/about.html
@@ -33,30 +33,27 @@
 
 		<body>
 			<header id="header">
-				<div class="container main-menu">
-					<div class="row align-items-center justify-content-between d-flex">
-						<div class id="logo">
-							<a href="/"><h3>H. Jansma </h3></a>
-					 </div>
-						<nav id="nav-menu-container">
-							<ul class="nav-menu">
-								<li><a href="/">Home</a></li>
-								<li><a href="about">About</a></li>
+	      <div class="container main-menu">
+	        <div class="row align-items-center justify-content-between d-flex">
+	          <div class id="logo">
+	            <a href="/"><h3>H. Jansma </h3></a>
+	         </div>
+	          <nav id="nav-menu-container">
+	            <ul class="nav-menu">
+	              <li><a href="/">Home</a></li>
+	              <li><a href="about">About</a></li>
 
 
-								<li><a href="archive">Portfolio</a>
-								</li>
+	              <li><a href="archive">Portfolio</a></li>
+	              <li><a href="huckleberry">Huck</a></li>
 
+	              <li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
+	              </ul>
 
-
-								<li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
-								</ul>
-							</ul>
-
-						</nav><!-- #nav-menu-container -->
-					</div>
-				</div>
-			</header><!-- #header -->
+	          </nav><!-- #nav-menu-container -->
+	        </div>
+	      </div>
+	    </header><!-- #header -->
 			<!-- start banner Area -->
 			<section class="about-banner">
 				<div class="container">
@@ -92,7 +89,7 @@
 						<div class="col-lg-12 pt-60">
 							<p>At the beginning of 2018 I didn't know where my life was going. After some serious self-reflection about my passions and interests, I committed to learning everything I could about machine learning, data science, and the tech industry.</p><p>
 
-							Today, I am nearing the end of the computer science Masters at the University of Texas at Dallas. I currently work as an intern data scientist at Sprint, using machine learning and statistical methods to detect when business systems fail. </p>
+							Today, I am nearing the end of my Computer Science Master's at the University of Texas at Dallas. I just finished an internship as a data scientist at Sprint, using machine learning and statistical methods to detect when business systems fail. </p>
 
 
 						</div>
@@ -168,7 +165,7 @@
 							 <time>Data Science Intern</time>
 						 </h4>
 						 <p><b>Sprint - Billing Systems</b></p>
-						 <p>May 2019 - Current</p>
+						 <p>May 2019 - Nov 2019</p>
 					 </div>
 				 </li>
 
