--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									 A few interesting things about me. I love to read science fiction (my favorite is Frank Herbert's Dune). I am also an avid gamer. I love to play competitive strategy games and first person shooters. Lastly, I love learning. Every day I push myself to learn something new, whether that be about machine learning, software engineeriing, or miscellaneous facts about the universe.
 								</p>
 								<p class="fz-16">
-									 I just finished an internship at Sprint, where I used statistics and machine learning to detect failures in business systems. I am currently finishing a Master's of Computer Science at the University of Texas at Dallas, after which I plan on searching for Data Science and Software Engineering positions in Texas, California, and California.
+									 I just finished an internship at Sprint, where I used statistics and machine learning to detect failures in business systems. I am currently finishing a Master's of Computer Science at the University of Texas at Dallas, after which I plan on searching for Data Science and Software Engineering positions in Texas, Colorado, and California.
 								</p>
 
 							</blockquote>
