--- a/about.html
+++ b/about.html
@@ -87,9 +87,9 @@
 
 
 						<div class="col-lg-12 pt-60">
-							<p>At the beginning of 2018 I didn't know where my life was going. After some serious self-reflection about my passions and interests, I committed to learning everything I could about machine learning, data science, and the tech industry.</p><p>
+							<p>At the beginning of 2018, I didn't know where my life was going. After some serious self-reflection about my passions and interests, I committed to learning everything I could about machine learning, data science, and the tech industry.</p><p>
 
-							Today, I am nearing the end of my Computer Science Master's at the University of Texas at Dallas. I just finished an internship as a data scientist at Sprint, using machine learning and statistical methods to detect when business systems fail. </p>
+							Today, I am nearing the end of my Computer Science Masters at the University of Texas at Dallas. I just finished an internship as a data scientist at Sprint, using machine learning and statistical methods to detect when business systems fail. In the coming weeks, I will be actively searching for data science and machine learning engineering positions in Dallas, TX.</p>
 
 
 						</div>
