--- a/index.html
+++ b/index.html
@@ -117,16 +117,17 @@
 		                </div>
 		            </div>
 					<div class="row">
-
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
-								<span class="lnr lnr-chart-bars"></span>
-								<a><h4>Data Analytics</h4></a>
+								<span class="lnr lnr-cloud-check"></span>
+								<a><h4>Cloud Compute</h4></a>
 								<p>
-									I love telling a story. Making a beautiful and compelling presentation is one of my favorite skills.
+										I maintain servers for database storage, model training, and model deployment.
 								</p>
 							</div>
 						</div>
+
+
 
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
@@ -169,10 +170,10 @@
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
-								<span class="lnr lnr-cloud-check"></span>
-								<a><h4>Cloud Compute</h4></a>
+								<span class="lnr lnr-chart-bars"></span>
+								<a><h4>Data Analytics</h4></a>
 								<p>
-										I maintain servers for database storage, model training, and model deployment.
+									I love telling a story. Making a beautiful and compelling presentation is one of my favorite skills.
 								</p>
 							</div>
 						</div>
@@ -216,41 +217,62 @@
 				<h4 class="text-center pt-50"> Devops </h4>
 				<div class="single-skill">
 					<p>
-						Server Management (Linux / Bash) -   3
-					</p>
-					<div class="skill" data-width="60"></div>
-				</div>
-				<div class="single-skill">
-					<p>
-						Database Manipulation (SQL) -   5
+						Databases (SQL) -   5
 					</p>
 					<div class="skill" data-width="100"></div>
 				</div>
+
 				<div class="single-skill">
 					<p>
-						Cluster Computing (HIVE) - 3
+						Servers (Linux / Bash) -   4
+					</p>
+					<div class="skill" data-width="80"></div>
+				</div>
+
+				<div class="single-skill">
+					<p>
+						Big Data (HIVE / Spark) - 3
 					</p>
 					<div class="skill" data-width="60"></div>
 				</div>
 			</div>
 
 
-			<div class="col-lg-4 skill-right">
-				<h4 class="text-center pt-50"> Data Analytics </h4>
-				<div class="single-skill">
-					<p>
-						Visualization and Presentation - 5
-					</p>
-					<div class="skill" data-width="100"></div>
-				</div>
 
+
+			<div class="col-lg-4 skill-right">
+				<h4 class="text-center pt-50">Machine Learning</h4>
 				<div class="single-skill">
 					<p>
 						Python - 5
 					</p>
 					<div class="skill" data-width="100"></div>
 				</div>
+				<div class="single-skill">
+					<p>
+						Computer Vision (TensorFlow) - 4
+					</p>
+					<div class="skill" data-width="80"></div>
+				</div>
 
+				<div class="single-skill">
+					<p>
+						NLP (Spacy / TensorFlow) - 4
+					</p>
+					<div class="skill" data-width="80"></div>
+				</div>
+
+			</div>
+
+			<div class="col-lg-4 skill-right">
+				<h4 class="text-center pt-50"> Data Analytics </h4>
+
+				<div class="single-skill">
+					<p>
+						Teaching / Presenting - 5
+					</p>
+					<div class="skill" data-width="100"></div>
+				</div>
 
 				<div class="single-skill">
 					<p>
@@ -258,29 +280,19 @@
 					</p>
 					<div class="skill" data-width="60"></div>
 				</div>
-			</div>
 
-			<div class="col-lg-4 skill-right">
-				<h4 class="text-center pt-50">Machine Learning</h4>
-				<div class="single-skill">
-					<p>
-						Deep Learning (PyTorch) - 4
-					</p>
-					<div class="skill" data-width="80"></div>
-				</div>
 
 				<div class="single-skill">
 					<p>
-						Natural Language Processing - 4
+						Visualization (Tableau) - 2
 					</p>
-					<div class="skill" data-width="80"></div>
+					<div class="skill" data-width="40"></div>
 				</div>
-				<div class="single-skill">
-					<p>
-						Predictive Modelling (SKLearn) - 4
-					</p>
-					<div class="skill" data-width="80"></div>
-				</div>
+
+
+
+
+
 			</div>
 
 		</div>
@@ -306,6 +318,28 @@
 			</div>
 		</div>
 		<div class="row">
+
+
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://github.com/harrisonjansma/DavisBase" target="_blank">
+					<img class="f-img" src="https://images.all-free-download.com/images/graphiclarge/vintage_database_icons_vector_536187.jpg" alt="" height=242>
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+					<div class="meta">
+						Nov 16th, 2019
+					</div>
+				</div>
+				<a href="https://github.com/harrisonjansma/DavisBase" target="_blank">
+					<h4>DavisBase</h4>
+				</a>
+				<p>
+					A fully functional, SQL-compliant database implemented from scratch in Python. DavisBase compresses data to a custom-designed bit-level encoding for maximal data compression. By utilizing a file size of 512Kb, DavisBase performs well in low memory environments while also maximizing query time.
+				</p>
+			</div>
+
+
 
 			<div class="single-recent-blog col-lg-4 col-md-4">
 				<div class="thumb">
@@ -351,26 +385,7 @@
 				</p>
 			</div>
 
-			<div class="single-recent-blog col-lg-4 col-md-4">
-				<div class="thumb">
-					<a href="https://towardsdatascience.com/how-to-learn-data-science-if-youre-broke-7ecc408b53c7" target="_blank">
-					<img class="f-img img-fluid" src="img/brokecover.jpg" alt="">
-				</a>
-				</div>
-				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-					<div class="meta">
-						Sep 16th, 2018
-					</div>
-				</div>
-				<a href="https://towardsdatascience.com/how-to-learn-data-science-if-youre-broke-7ecc408b53c7" target="_blank">
-					<h4>How to Learn Data-Science</h4>
-				</a>
-				<p>
-					In this article, published in Towards Data Science and KDNuggets, I recount my months of self-study and gave advice and resources for the aspiring data-scientist.
-<br><br>
-					This article was the most shared story on KDNuggets for the month of October 2018.
-				</p>
-			</div>
+
 
 
 
