--- a/index.html
+++ b/index.html
@@ -319,6 +319,46 @@
 		</div>
 		<div class="row">
 
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://towardsdatascience.com/automating-aws-server-shut-down-for-deep-learning-5d5de1301c70" target="_blank">
+					<img class="f-img img-fluid" src="img/medium2.jpg" alt="">
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
+					<div class="meta">
+						Jan 20, 2020
+					</div>
+				</div>
+				<a href="https://towardsdatascience.com/automating-aws-server-shut-down-for-deep-learning-5d5de1301c70" target="_blank">
+					<h4>Automating AWS EC2 Shutdown with Bash Scripts </h4>
+				</a>
+				<p>
+					A helpful tutorial I wrote recently on how to set up a Bash script that utilized the AWS CLI to start, log into, then shutdown an EC2 instance. (I didn't want to forget the instance was running and lose money)
+				</p>
+			</div>
+
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://github.com/harrisonjansma/2019_Notes/tree/master/ML/NLP/PyTorch%20RNN%20Implementations" target="_blank">
+					<img class="f-img" src="img/alg.jpg" alt="" height=242>
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+					<div class="meta">
+						Dec 10, 2019
+					</div>
+				</div>
+				<a href="https://github.com/harrisonjansma/2019_Notes/tree/master/ML/NLP/PyTorch%20RNN%20Implementations" target="_blank">
+					<h4>RNNs, LSTMs, and Attention Mechanisms for Language Modelling (PyTorch)</h4>
+				</a>
+				<p>
+				  Tested the use of Word2Vec embeddings with a variety of sequential input deep learning models towards the task of language modeling (predicting the next word in a sentence).
+				</p>
+			</div>
+
+
 
 			<div class="single-recent-blog col-lg-4 col-md-4">
 				<div class="thumb">
@@ -327,63 +367,22 @@
 				</a>
 				</div>
 				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
 					<div class="meta">
-						Nov 16th, 2019
+						Dec 2, 2019
 					</div>
 				</div>
 				<a href="https://github.com/harrisonjansma/DavisBase" target="_blank">
-					<h4>DavisBase</h4>
+					<h4>DavisBase: A Custom Designed Database (Python)</h4>
 				</a>
 				<p>
-					A fully functional, SQL-compliant database implemented from scratch in Python. DavisBase compresses data to a custom-designed bit-level encoding for maximal data compression. By utilizing a file size of 512Kb, DavisBase performs well in low memory environments while also maximizing query time.
-				</p>
-			</div>
-
-
-
-			<div class="single-recent-blog col-lg-4 col-md-4">
-				<div class="thumb">
-					<a href="https://github.com/harrisonjansma/Cpp-Algorithm-Implementations" target="_blank">
-					<img class="f-img img-fluid mx-auto" src="img/alg.jpg" alt="">
-				</a>
-				</div>
-				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-
-					<div class="meta">
-						Aug 14th, 2019
-					</div>
-				</div>
-				<a href="https://github.com/harrisonjansma/Cpp-Algorithm-Implementations" target="_blank">
-					<h4>Implementing Common Algorithms in C++</h4>
-				</a>
-				<p>
-					The only way to become a not-garbage-coder is to code a lot. <br><br> This repository contains some of the coursework I've completed over the last few months. As the semester winds down, I hope to start a new passion project soon!
+					  A fully functional, SQL-compliant database implemented from scratch in Python. DavisBase compresses data to a custom-designed bit-level encoding for maximal data compression. By utilizing a file size of 512Kb, DavisBase performs well in low memory environments while also maximizing query time.
 				</p>
 			</div>
 
 
 
 
-			<div class="single-recent-blog col-lg-4 col-md-4">
-				<div class="thumb">
-					<a href="https://github.com/harrisonjansma/Analyzing_Medium" target="_blank">
-					<img class="f-img img-fluid" src="img/medium2.jpg" alt="">
-				</a>
-				</div>
-				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-
-					<div class="meta">
-						Oct 10th, 2018
-					</div>
-				</div>
-				<a href="https://github.com/harrisonjansma/Analyzing_Medium" target="_blank">
-					<h4>Scraping 1.4 Million Medium Stories</h4>
-				</a>
-				<p>
-					I recently collected data from 1.4 million stories of Medium.com.<br><br> I used the data to make the first public analysis of Medium stories,
-					 to create a performance metric to fuel authors, and lastly I published the full dataset for Medium's community of data-scientists.
-				</p>
-			</div>
 
 
 
