--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								Contemplative coder and analyst. Inspired by tough problems.
 							</p>
 
-							<a href="#portfolio" class="primary-btn text-uppercase mb-20">My Projects</a>
+							<a href="archive" class="primary-btn text-uppercase mb-20">My Projects</a>
 						</div>
 						<div class="col-lg-6 col-md-6 col-xs-6 banner-right align-self-center">
 							<img src="img/harrison.png" style="width:auto;height:auto;max-width:100%;">
