--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<!-- Start home-about Area -->
 			<section class="home-about-area section-gap">
 				<div class="container">
-					<div class="row align-items-center justify-content-between">
+					<div class="row align-items-center justify-content-between personal-details">
 
 
 							<h1 class="text-uppercase">Personal Details</h1>
