--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 	              <li><a href="archive">Portfolio</a></li>
 	              <li><a href="huckleberry">Huck</a></li>
-                       <li><a href="https://amyrayblog.com">The Fiancé</a> </li>
+                       <li><a href="https://www.amyrayblog.com">The Fiancé</a> </li>
 	              <li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 	              </ul>
 
