--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 	              <li><a href="archive">Portfolio</a></li>
 	              <li><a href="huckleberry">Huck</a></li>
-                       <li><a href="https://www.amyrayblog.com">The Fiancé</a> </li>
+                <li><a href="https://www.amyrayblog.com">The Fiancé</a> </li>
 	              <li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 	              </ul>
 
@@ -65,7 +65,6 @@
 							<p>
 								Contemplative coder and analyst. Inspired by tough problems.
 							</p>
-
 							<a href="archive" class="primary-btn text-uppercase mb-20">My Projects</a>
 						</div>
 						<div class="col-lg-6 col-md-6 col-xs-6 banner-right align-self-center">
@@ -80,19 +79,17 @@
 			<section class="home-about-area section-gap">
 				<div class="container">
 					<div class="row align-items-center justify-content-between personal-details">
-
-
 							<h1 class="text-uppercase">Personal Details</h1>
 							<br>
 							<br>
 
 							<blockquote class="generic-blockquote">
 								<p class="fz-16">
-                  
+
 									 A few interesting things about me. I love to read science fiction (my favorite is Frank Herbert's Dune). I am also an avid gamer. I love to play competitive strategy games and first-person shooters. Lastly, I love learning. Every day I push myself to learn something new, whether that be about machine learning, software engineering, or miscellaneous facts about the universe.
 								</p>
 								<p class="fz-16">
-									 I just finished an internship at Sprint, where I used statistics and machine learning to detect failures in business systems. I am currently finishing a Master's of Computer Science at the University of Texas at Dallas, after which I plan on searching for Data Science and Software Engineering positions in Texas, Colorado, and California.
+									 I recently started working as a data process manager at Capital One. My work mainly revolves around finding ways to automate business reports that have been entirely manual in the past. I have cut down the number of Graduate classes I am taking to accomadate a fulltime work schedule, but I plan to graduate from the University of Texas at Dallas in May with a Masters in Computer Science.
 								</p>
 
 							</blockquote>
@@ -199,17 +196,9 @@
 										 3 - Intermediate<span style="display: inline-block; width: 2ch;">&#9;</span>
 										  <p>4 - Advanced<span style="display: inline-block; width: 2ch;">&#9;</span>
 											 5 - Expert<p/>
-
 							</div>
-
 					</div>
 			</div>
-
-
-
-
-
-
 
 
 <div class="container">
@@ -290,10 +279,6 @@
 					<div class="skill" data-width="40"></div>
 				</div>
 
-
-
-
-
 			</div>
 
 		</div>
@@ -359,8 +344,6 @@
 				</p>
 			</div>
 
-
-
 			<div class="single-recent-blog col-lg-4 col-md-4">
 				<div class="thumb">
 					<a href="https://github.com/harrisonjansma/DavisBase" target="_blank">
@@ -380,187 +363,11 @@
 					  A fully functional, SQL-compliant database implemented from scratch in Python. DavisBase compresses data to a custom-designed bit-level encoding for maximal data compression. By utilizing a file size of 512Kb, DavisBase performs well in low memory environments while also maximizing query time.
 				</p>
 			</div>
-
-
-
-
-
-
-
-
-
-
-
-
 		</div>
 	</div>
 </section>
 <!-- end recent-blog Area -->
 
-
-
-<!---
-			<section class="portfolio-area section-gap" id="portfolio">
-					<div class="container">
-					<div class="row d-flex justify-content-center">
-							<div class="menu-content pb-30 col-lg-8">
-									<div class="title text-center">
-											<h1 class="mb-10">My Latest Projects</h1>
-											<p>Take a look at my recent work.</p>
-									</div>
-							</div>
-					</div>
-
-							<div class="filters">
-									<ul>
-											<li class="active" data-filter="*">All</li>
-											<li data-filter=".ComputerVision">Computer Vision</li>
-											<li data-filter=".NLP">NLP</li>
-											<li data-filter=".WebApps">Web Apps</li>
-											<li data-filter=".DataScience">Data Science</li>
-									</ul>
-							</div>
-
-							<div class="filters-content">
-									<div class="row grid" style="height:865px;">
-
-
-										<div class="single-portfolio col-sm-4 all ComputerVision">
-											<div class="relative">
-											<div class="thumb">
-													<div class="overlay overlay-bg"></div>
-													 <img class="image img-fluid" src="img/dropoutjpg.jpg" alt="">
-												</div>
-					<a href="https://towardsdatascience.com/dont-use-dropout-in-convolutional-networks-81486c823c16">
-						<div class="middle">
-							<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-						</div>
-					</a>
-											</div>
-												<div class="p-inner">
-													<a href="https://towardsdatascience.com/dont-use-dropout-in-convolutional-networks-81486c823c16">
-														<h5>Don't Use Dropout</h5></a>
-														<div class="cat">Aug 14, 2018</div>
-												</div>
-										</div>
-
-
-										<div class="single-portfolio col-sm-4 all ComputerVision">
-											<div class="relative">
-												<div class="thumb">
-													<div class="overlay overlay-bg"></div>
-													 <img class="image img-fluid" src="img/sig4squarejpg.jpg" alt="">
-												</div>
-					<a href="https://towardsdatascience.com/intuit-and-implement-batch-normalization-c05480333c5b" target="_blank">
-						<div class="middle">
-							<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-						</div>
-				</a>
-											</div>
-				<div class="p-inner">
-					<a href="https://towardsdatascience.com/intuit-and-implement-batch-normalization-c05480333c5b" target="_blank">
-						<h5>Batch Normalization: Implement and Intuit</h5></a>
-					<div class="cat">July 27, 2018</div>
-				</div>
-										</div>
-
-
-
-											<div class="single-portfolio col-sm-4 all ComputerVision">
-												<div class="relative">
-													<div class="thumb">
-														<div class="overlay overlay-bg"></div>
-														 <img class="image img-fluid" src="img/hucklecover2jpg.jpg" alt="">
-													</div>
-						<a href="GAP">
-							<div class="middle">
-								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-							</div>
-					</a>
-												</div>
-					<div class="p-inner">
-						<a href="GAP">
-							<h5>GAP: Object Localization</h5></a>
-						<div class="cat">July 16, 2018</div>
-					</div>
-											</div>
-
-
-
-
-											<div class="single-portfolio col-sm-4 all NLP">
-												<div class="relative">
-													<div class="thumb">
-														<div class="overlay overlay-bg"></div>
-														 <img class="image img-fluid" src="img/applesquare.jpg" alt="">
-													</div>
-						<a href="apple">
-							<div class="middle">
-								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-							</div>
-					</a>
-												</div>
-					<div class="p-inner">
-						<a href="apple">
-							<h5>Apple Sentiment Analysis</h5></a>
-						<div class="cat">June 20, 2018</div>
-					</div>
-											</div>
-
-
-											<div class="single-portfolio col-sm-4 all NLP">
-												<div class="relative">
-													<div class="thumb">
-														<div class="overlay overlay-bg"></div>
-														 <img class="image img-fluid" src="img/gassquare.jpg" alt="">
-													</div>
-						<a href="toxic">
-							<div class="middle">
-								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-							</div>
-						</a>
-												</div>
-													<div class="p-inner">
-														<a href="toxic">
-															<h5>Toxic Topic Modelling</h5></a>
-															<div class="cat">June 13, 2018</div>
-													</div>
-											</div>
-
-
-											<div class="single-portfolio col-sm-4 all DataScience">
-												<div class="relative">
-													<div class="thumb">
-														<div class="overlay overlay-bg"></div>
-														 <img class="image img-fluid" src="img/clusteringjpg.jpg" alt="">
-													</div>
-						<a href="Clustering">
-							<div class="middle">
-								<div class="text justify-content-center d-flex"><img src="img/preview.png" alt=""></div>
-							</div>
-						</a>
-												</div>
-													<div class="p-inner">
-														<a href="Clustering">
-															<h5>Clustering Mental Health</h5></a>
-															<div class="cat">May 23, 2018</div>
-													</div>
-											</div>
-
-
-
-
-									</div>
-							</div>
-
-					</div>
-
-					<div class="container text-right mt-10">
-					<a href="archive" class="primary-btn text-uppercase">Project Archive</a>
-				</div>
-			</section>
-			--->
-			<!-- End portfolio-area Area -->
 
 
 <hr>
