--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 
 	              <li><a href="archive">Portfolio</a></li>
 	              <li><a href="huckleberry">Huck</a></li>
-
+                <li><a href="https://www.amyrayblog.com">The Fiancé</a> </li>
 	              <li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 	              </ul>
 
@@ -89,7 +89,7 @@
 						<div class="col-lg-12 pt-60">
 							<p>At the beginning of 2018, I didn't know where my life was going. After some serious self-reflection about my passions and interests, I committed to learning everything I could about machine learning, data science, and the tech industry.</p><p>
 
-							Today, I am nearing the end of my Computer Science Masters at the University of Texas at Dallas. I just finished an internship as a data scientist at Sprint, using machine learning and statistical methods to detect when business systems fail. In the coming weeks, I will be actively searching for data science and machine learning engineering positions in Dallas, TX.</p>
+							In April I started working fulltime at Capital One as a data process manager. Here I use my technical knowledge to automate a few of the tedious business processes that always lurk in large organizations. My intention is to help my colleagues by removing the repetitive tasks that eat away at our attention each workday.</p>
 
 
 						</div>
@@ -168,7 +168,15 @@
 						 <p>May 2019 - Nov 2019</p>
 					 </div>
 				 </li>
-
+         <li>
+					 <div class="content">
+						 <h4>
+							 <time>Data Process Manager</time>
+						 </h4>
+						 <p><b>Capital One</b></p>
+						 <p>April 2020 - Present</p>
+					 </div>
+				 </li>
 			  </ul>
 			</section>
 			<hr id="FAQ">
